ELB-Application-LoadBalancer/ALB-Ingress-ExternalDNS/Use-ExternalDNS-for-Apps/kube-manifests/01-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cgbwas57jvuq.us-east-1.rds.amazonaws.com
